# radiation

./: Cargo.toml  LICENSE  README.md
benches/: coding.rs
macros/: Cargo.toml
macros/src/: absorb.rs  emit.rs  lib.rs  limit.rs
src/: codec.rs  dil.rs  lib.rs  tests.rs
src/absorb/: atomics.rs  core.rs  error.rs  limit.rs  mod.rs  primitives.rs  seq.rs  types.rs
src/emit/: atomics.rs  core.rs  mod.rs  primitives.rs  seq.rs  types.rs
