[workspace]
members = [".", "macros"]

[package]
name = "radiation"
version = "0.1.2"
edition = "2021"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
rust-version = "1.58.1"
license = "MIT"
description = "Convert Rust type into raw bytes and vice versa"
repository = "https://github.com/vlad9486/radiation.git"
keywords = ["binary", "encode", "decode"]
categories = ["rust-patterns", "encoding", "no-std"]

[dependencies]
nom = { version = "7.1" }
hex = { version = "0.4.3" }

radiation-macros = { path = "macros", version = "=0.1.2", optional = true }

[features]
default = ["derive"]
derive = ["radiation-macros"]
nightly = []
