[package]
name = "radiation-macros"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
rust-version = "1.58.1"
license = "MIT"
description = "Macroses to derive traits for radiation crate"
repository = "https://github.com/vlad9486/radiation.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
syn = { version = "1.0", features = ["derive", "parsing"] }
quote = { version = "1.0" }
synstructure = { version = "0.12.6" }
